New Title on index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Project WebRTC</title>
+<head><title>Project WebRTC: Video Chat</title>
 <meta name="google-site-verification" content="ypeuHlNvKaakdUl-zfEf9q0Bj9Ve9y-QTmBHhQ6l3WE" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Le styles -->
