Added Lang on index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html language="en">
 <head><title>Project WebRTC: Video & text Chat</title>
 <meta name="google-site-verification" content="ypeuHlNvKaakdUl-zfEf9q0Bj9Ve9y-QTmBHhQ6l3WE" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
