--- a/template.html
+++ b/template.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html language="en"><head>
 <title>{ title }</title>
+<script>{ script }</script>
+<rel >{ links } />
 </head>
 <body>
 { body }
